Default role to delete config file after it’s downloaded and included as a variable file.   Use bool jinja2 filter to evaluate var as a boolean.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,7 +24,7 @@
   - name: delete config file from host
     file:
         path: "{{ s3_vars_file_dest_path }}"
-    when: s3_vars_delete_config
+    when: s3_vars_delete_config|bool
 
 run_once: true
 become: false
