--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 # defaults file for s3_vars
-s3_vars_file_dest: /tmp
-s3_vars_delete_config: true
+s3_vars_config_local_dir: "/tmp/ansible-role-s3-vars"
+s3_vars_config_cleanup: true
+s3_vars_config_local_file_name: "{{ s3_vars_bucket + '-' + ( s3_vars_object | replace('/', '-') ) }}"
