--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
         state: directory
 
   - name: download config from s3
-    s3:
+    aws_s3:
       profile: "{{ s3_vars_aws_profile | d(omit) }}"
       bucket: "{{ s3_vars_bucket }}"
       object: "{{ s3_vars_object }}"
